# finfo

./: .gitignore  Cargo.toml  README.md  quote.md  watchlist.json
examples/: influx_flight_query.txt  query.rs  storage.rs
src/: fetch_price.rs  lib.rs  main.rs  query.rs  storage.rs
