[package]
name = "finfo"
version = "0.1.0"
edition = "2024"

[dependencies]
longport = "3.0.13"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-cron-scheduler = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
decimal = "2.0"