[package]
name = "finfo"
version = "0.1.0"
edition = "2024"

[dependencies]
longport = "3.0.13"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Arrow Flight 协议及其 SQL 客户端
arrow-array = "56" 
arrow-schema = "56"
arrow = { version = "56", features = ["prettyprint"] }
arrow-flight = { version = "56", features = ["flight-sql"] }

tonic = "0.13.1"
bytes = "1.10.1"
futures = "0.3.31"