[package]
name = "finfo"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
longport = "3.0.13"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

arrow-flight = { version = "56", features = ["flight-sql"] }

tonic = "0.13.1"
futures = "0.3.31"

polars = "0.51.0"
df-interchange = { version = "0.2.7" ,features = ["polars_0_51", "arrow_56"] }
time = "0.3.44"
arrow-array = "56.0.0"
